@@ -1,6 +1,6 @@
 Name: netcdf
-Version: 1.0.3
-Date: 2014-05-08
+Version: 1.0.4
+Date: 2014-05-26
 Author: Alexander Barth <barth.alexander@gmail.com>
 Maintainer: Alexander Barth <barth.alexander@gmail.com>
 Title: netcdf
